# USDA-Fraud-Project

./: .env  .gitignore  FDIC_scraper.py  README.md  cleaned_merged_grouped_embed_and_type.csv  detection_method_clustering.py  embedding.py  embedding_with_ai.py  fdicOIG_scraper.py  loan.py  main.py  modal.py  model_train.py  non_fraud_embedding.py  pyproject.toml  streamlit_run.py  streamlit_run_ver_2.py  supa_upsert.py  test_api.py  upsert_to_supabase.py  usaa_modal.py  visuals.py
.streamlit/: config.toml  theme.css
New Visuals/: Fraud_type_counts.joblib  Fraud_type_counts_pie.joblib  fraud_type_trends.joblib  fraud_vs_detection_heatmap.joblib  loan_fraud_secondary_trends.joblib  semantic_drift.joblib
data/: fdic_articles.csv  fdic_articles.json  og_art.csv  og_json.json
data/outputs_w_ai/: fraud_detection_model.pkl  fraud_type_model.pkl  fraud_xgb_multi.pkl
data/outputs_w_ai/new_models/: fraud_type_model.pkl
outputs/: embedding_cluster_summary.csv  full_article_embedding.csv  top_anomalies.csv
outputs_new_prompt/: fdic_oig_embedding_cluster_summary.csv  fdic_oig_investigations_dataset.csv  problematic_embeddings.csv
outputs_new_prompt/last/: fdic_oig_embedding_cluster_summary.csv
outputs_not_fraud/: article_embedding_full.parquet  embedding_cluster_summary.csv  full_article_embedding.csv
outputs_w_ai/: embedding_cluster_summary.csv  fraud_type_encoder.pkl  full_article_embedding.csv
outputs_w_ai/new_models/: fraud_detection_model.pkl  fraud_type_encoder.pkl
