[project]
name = "fraudproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bertopic>=0.17.3",
    "bs4>=0.0.2",
    "dataparser>=0.0.2",
    "dateparser>=1.2.2",
    "dotenv>=0.9.9",
    "geopy>=2.4.1",
    "hdbscan>=0.8.40",
    "imblearn>=0.0",
    "matplotlib>=3.10.7",
    "modal>=1.2.2",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "openai>=2.7.1",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "plotly>=6.3.1",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "selenium>=4.38.0",
    "sentence-transformers>=5.1.2",
    "spacy>=3.8.7",
    "streamlit>=1.50.0",
    "streamlit-extras>=0.7.8",
    "supabase>=2.22.3",
    "tqdm>=4.67.1",
    "us>=3.2.0",
    "xgboost>=3.1.1",
]
